--- a/research.html
+++ b/research.html
@@ -86,8 +86,9 @@
 					<ul class="icons">
 						<li><a href="mailto:andrey.rudenko@de.bosch.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="https://scholar.google.com/citations?user=BlSfMYwAAAAJ&hl=en" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
-						<li><a href="https://www.linkedin.com/in/andrey-rudenko-512577131/" class="fa fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/andrey-rudenko-512577131/"class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/rudenkoandrey" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.flickr.com/photos/nekr0n/" class="icon brands fa-flickr"><span class="label">Flickr</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; 2020 Andrey Rudenko</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
