--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<header class="major">
 							<h3>News</h3>
 							<ul>
-								<li><b>12.03.20</b> &ensp; I will present an <a href="pdf/rudenko2020ws_HRI.pdf"> extended</a> abstract about THÖR and benchmarking motion prediction in the <a href="https://hri-methods-metrics.github.io">HRI 2020 Workshop on Test Methods and Metrics for Effective HRI in Real World Human-Robot Teams</a>.</li>
+								<li><b>12.03.20</b> &ensp; I will present an <a href="pdf/rudenko2020ws_HRI.pdf"> extended abstract</a> about THÖR and benchmarking motion prediction in the <a href="https://hri-methods-metrics.github.io">HRI 2020 Workshop on Test Methods and Metrics for Effective HRI in Real World Human-Robot Teams</a>.</li>
 								<li><b>25.01.20</b> &ensp; Our proposal for the <a href="https://www.ieee-ras.org/publications/ra-l/special-issues/cfp-special-long-term-human-motion-prediction">RA-L Special Issue on Long-Term Human Motion prediction</a> was accepted with great enthusiasm from the community. Looking forward to all the exciting submissions! Deadline is on the 01.05.2020.</li>
 								<li><b>22.01.20</b> &ensp; Our THÖR paper was <a href="https://ieeexplore.ieee.org/document/8954833">accepted to RA-L</a> and will be presented at the <a href="https://www.icra2020.org">ICRA 2020 conference</a>.</li>
 								<li><b>21.12.19</b> &ensp; The <a href="https://motionpredictionicra2020.github.io">2nd Workshop on Long-term Human Motion Prediction</a> was accepted to ICRA with great reviews. Looking forward to an amazing event!</li>
