Adding news and Survey IRJJ

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 						<header class="major">
 							<h3>News</h3>
 							<ul>
+								<li><b>20.06.20</b> &ensp; I am co-organizing the <a href="https://sites.google.com/view/btfm2020/homepage">Workshop on Benchmarking Trajectory Forecasting Models</a> at the virtual ECCV 2020 conference.</li>
+								<li><b>02.06.20</b> &ensp; Great success of our second <a href="https://motionpredictionicra2020.github.io">LHMP workshop</a> at the virtual ICRA 2020 conference! Seven exciting talks, over 200 people in the audience, live stream on IEEE.TV. Recordings are available on <a href="https://www.youtube.com/playlist?list=PLrLNIllEiqRAb-eDahuDJunDSC7lP2V78">Youtube</a>.</li>
 								<li><b>12.03.20</b> &ensp; I will present an <a href="pdf/rudenko2020ws_HRI.pdf"> extended abstract</a> about THÖR and benchmarking motion prediction in the <a href="https://hri-methods-metrics.github.io">HRI 2020 Workshop on Test Methods and Metrics for Effective HRI in Real World Human-Robot Teams</a>.</li>
 								<li><b>25.01.20</b> &ensp; Our proposal for the <a href="https://www.ieee-ras.org/publications/ra-l/special-issues/cfp-special-long-term-human-motion-prediction">RA-L Special Issue on Long-Term Human Motion prediction</a> was accepted with great enthusiasm from the community. Looking forward to all the exciting submissions! Deadline is on the 01.05.2020.</li>
 								<li><b>22.01.20</b> &ensp; Our THÖR paper was <a href="https://ieeexplore.ieee.org/document/8954833">accepted to RA-L</a> and will be presented at the <a href="https://www.icra2020.org">ICRA 2020 conference</a>.</li>
