--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 						<h2>Highlights</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://motionpredictionicra2021.github.io" class="image fit thumb"><img src="images/thumbs/lhmp2021.png" alt="" /></a>
+								<h3>3rd Workshop on Long-term Human Motion Prediction</h3>
+								<p>IEEE ICRA 2021 Conference, Xi'an, China</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://arxiv.org/abs/2102.08745" class="image fit thumb"><img src="images/thumbs/semapp.png" alt="" /></a>
+								<h3>Understanding human motion in urban environments</h3>
+								<p>Learning occupancy priors from semantic maps with Inverse Reinforcement Learning and Convolutional Neural Networks</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://motionpredictionicra2020.github.io" class="image fit thumb"><img src="images/thumbs/lhmp.png" alt="" /></a>
 								<h3>2nd Workshop on Long-term Human Motion Prediction</h3>
 								<p>IEEE ICRA 2020 Conference, Paris, France</p>
@@ -67,6 +77,10 @@
 						<header class="major">
 							<h3>News</h3>
 							<ul>
+								<li><b>01.03.21</b> &ensp; After 4 years of PhD research in Bosch, I joined the company as a full-time employee.</li>
+								<li><b>02.02.21</b> &ensp; I am happy tp give a talk on predictive navigation at the 2nd Industry Workshop of the <a href="https://www.more-itn.eu">MORE publically-funded EU project</a> on the 4th of March.</li>
+								<li><b>19.01.21</b> &ensp; Our paper on <a href="https://ieeexplore.ieee.org/abstract/document/9362163/">learning occupancy priors in urban environments</a> with IRL and CNNs was accepted to RA-L. Get a load of this, ECCV 2020 and your poorly chosen reviewers with little to no prior experience on the topic!</li>
+								<li><b>15.01.21</b> &ensp; The <a href="https://motionpredictionicra2021.github.io">3rd Workshop on Long-term Human Motion Prediction</a> was accepted to ICRA 2021 with outstanding feedback from the reviewers. This will be another fantastic event!</li>
 								<li><b>20.06.20</b> &ensp; I am co-organizing the <a href="https://sites.google.com/view/btfm2020/homepage">Workshop on Benchmarking Trajectory Forecasting Models</a> at the virtual ECCV 2020 conference.</li>
 								<li><b>02.06.20</b> &ensp; Great success of our second <a href="https://motionpredictionicra2020.github.io">LHMP workshop</a> at the virtual ICRA 2020 conference! Seven exciting talks, over 200 people in the audience, live stream on IEEE.TV. Recordings are available on <a href="https://www.youtube.com/playlist?list=PLrLNIllEiqRAb-eDahuDJunDSC7lP2V78">Youtube</a>.</li>
 								<li><b>12.03.20</b> &ensp; I will present an <a href="pdf/rudenko2020ws_HRI.pdf"> extended abstract</a> about THÖR and benchmarking motion prediction in the <a href="https://hri-methods-metrics.github.io">HRI 2020 Workshop on Test Methods and Metrics for Effective HRI in Real World Human-Robot Teams</a>.</li>
