--- a/research.html
+++ b/research.html
@@ -56,6 +56,8 @@
 					<section id="three">
 						<h2>Publications</h2>
 						<ul>
+								<li><b>Learning Occupancy Priors of Human Motion from Semantic Maps of Urban Environments</b> <a href="https://arxiv.org/abs/2102.08745">[pdf]</a> <br> 
+								Rudenko A., Palmieri L., Doellinger J., Lilienthal A. J. and Arras K. O.; <i>IEEE Robotics and Automation Letters</i>, 2021 </li>
 								<li><b>Human Motion Trajectory Prediction: A Survey</b> <a href="https://arxiv.org/abs/1905.06113">[pdf]</a> <br> 
 								Rudenko A., Palmieri L., Herman M., Kitani K., Gavrila D. and Arras K. O.; <i>The International Journal of Robotics Research</i>, 2020 </li>
 								<li><b>THÖR: Human-Robot Navigation Data Collection and Accurate Motion Trajectories Dataset</b> <a href="https://arxiv.org/pdf/1909.04403.pdf">[pdf]</a> <br> 
