--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
 						<header class="major">
 							<h3>News</h3>
 							<ul>
+								<li><b>21.04.21</b> &ensp; Tonight I will give a <a href="https://robotics.leeds.ac.uk/events/pint-of-robotics-human-motion-prediction-for-safe-and-efficient-operation-in-human-environments-dr-andrey-rudenko-robert-bosch-gmbh-corporate-research/">seminar talk on motion prediction</a> at the University of Leeds. Thanks to Fanta Camara for the kind invitation.</li>
 								<li><b>01.03.21</b> &ensp; After 4 years of PhD research in Bosch, I joined the company as a full-time employee.</li>
-								<li><b>02.02.21</b> &ensp; I am happy tp give a talk on predictive navigation at the 2nd Industry Workshop of the <a href="https://www.more-itn.eu">MORE publically-funded EU project</a> on the 4th of March.</li>
+								<li><b>02.02.21</b> &ensp; I am happy to give a talk on predictive navigation at the 2nd Industry Workshop of the <a href="https://www.more-itn.eu">MORE publically-funded EU project</a> on the 4th of March.</li>
 								<li><b>19.01.21</b> &ensp; Our paper on <a href="https://ieeexplore.ieee.org/abstract/document/9362163/">learning occupancy priors in urban environments</a> with IRL and CNNs was accepted to RA-L. Get a load of this, ECCV 2020 and your poorly chosen reviewers with little to no prior experience on the topic!</li>
 								<li><b>15.01.21</b> &ensp; The <a href="https://motionpredictionicra2021.github.io">3rd Workshop on Long-term Human Motion Prediction</a> was accepted to ICRA 2021 with outstanding feedback from the reviewers. This will be another fantastic event!</li>
 								<li><b>20.06.20</b> &ensp; I am co-organizing the <a href="https://sites.google.com/view/btfm2020/homepage">Workshop on Benchmarking Trajectory Forecasting Models</a> at the virtual ECCV 2020 conference.</li>
