--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>Human-centered, socially-aware robotics research</h2>
 						</header>
-						<p>Hi, my name is Andrey Rudenko, I am a PhD candidate at the University of Örebro and Robert Bosch GmbH Corporate Research Renningen.
+						<p>Hi, my name is Andrey Rudenko, I am a PhD candidate at the University of Örebro and Robert Bosch Corporate Research Renningen.
 						I work on <strong>human motion trajectory prediction and predictive planning for service robots</strong>.
 						This website contains up-to-date information about my research.</p>
 					</section>
