--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 						<header class="major">
 							<h2>Human-centered, socially-aware robotics research</h2>
 						</header>
-						<p>Hi, my name is Andrey Rudenko, I am a PhD candidate at the University of Örebro and Robert Bosch Corporate Research Renningen.
-						I work on <strong>human motion trajectory prediction and predictive planning for service robots</strong>.
+						<p>Hi, my name is Andrey Rudenko, I am a research scientist at Robert Bosch Corporate Research. I work on <strong>human motion trajectory prediction and predictive planning for service robots</strong>.
 						This website contains up-to-date information about my research.</p>
 					</section>
 					
@@ -39,6 +38,11 @@
 					<section id="two">
 						<h2>Highlights</h2>
 						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://motionpredictionicra2022.github.io" class="image fit thumb"><img src="images/thumbs/lhmp2022.png" alt="" /></a>
+								<h3>4th Workshop on Long-term Human Motion Prediction</h3>
+								<p>IEEE ICRA 2022 Conference, Philadelphia, USA</p>
+							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://motionpredictionicra2021.github.io" class="image fit thumb"><img src="images/thumbs/lhmp2021.png" alt="" /></a>
 								<h3>3rd Workshop on Long-term Human Motion Prediction</h3>
@@ -77,6 +81,10 @@
 						<header class="major">
 							<h3>News</h3>
 							<ul>
+								<li><b>12.05.22</b> &ensp; Preparation of the follow-up <a href="https://motionpredictionicra2022.github.io">4th Workshop on Long-term Human Motion Prediction</a> is going full steam ahead! Looking forward to the 9 inspiring talks from experts in industry and research.</li>
+								<li><b>06.05.22</b> &ensp; Successful fisrt <a href="https://darko-project.eu">DARKO</a> Integration Week at the Örebro University. Was a real pleasure to meet in-person all the new colleagues in this fascinating project!</li>
+								<li><b>04.09.21</b> &ensp; Today I defended my <a href="https://www.diva-portal.org/smash/record.jsf?pid=diva2%3A1562394&dswid=-3029">PhD thesis</a>. My deepest thanks goes to Kai, Luigi and Achim for their generous supervision and outstanding support along this path.</li>
+								<li><b>13.07.21</b> &ensp; Giving the first peak into our new Atlas Benchmark for motion prediction algorithm at the <a href="https://socialrobotnavigation.github.io/acceptedpapers.html">2021 RSS Workshop on Social Navigation</a>.</li>
 								<li><b>21.04.21</b> &ensp; Tonight I will give a <a href="https://robotics.leeds.ac.uk/events/pint-of-robotics-human-motion-prediction-for-safe-and-efficient-operation-in-human-environments-dr-andrey-rudenko-robert-bosch-gmbh-corporate-research/">seminar talk on motion prediction</a> at the University of Leeds. Thanks to Fanta Camara for the kind invitation.</li>
 								<li><b>01.03.21</b> &ensp; After completing 4 years of PhD research in Bosch, I joined the company as a full-time employee.</li>
 								<li><b>02.02.21</b> &ensp; I am happy to give a talk on predictive navigation at the 2nd Industry Workshop of the <a href="https://www.more-itn.eu">MORE publically-funded EU project</a> on the 4th of March.</li>
@@ -120,7 +128,7 @@
 						<li><a href="https://www.flickr.com/photos/nekr0n/" class="icon brands fa-flickr"><span class="label">Flickr</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; 2020 Andrey Rudenko</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2022 Andrey Rudenko</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
