--- a/research.html
+++ b/research.html
@@ -28,8 +28,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Background</h2>
-						<p>I started my PhD research in Robert Bosch GmbH in March 2017 and 
-						joined the Örebro University <a href="https://mro.oru.se">Mobile Robotics and Olfaction Lab</a> in January 2018. 
+						<p>Having completed my PhD studies, I joined Robert Bosch as a research scientist. I started my PhD research in Robert Bosch GmbH in March 2017 and joined the Örebro University <a href="https://mro.oru.se">Mobile Robotics and Olfaction Lab</a> in January 2018. 
 						The topic of my research is prediction of human motion in social spaces for service robots. 
 						I received my M.Sc. in Computer Science at the Albert-Ludwigs-Universität Freiburg, Germany, 
 						working during the studies as a research assistant at the <a href="http://srl.informatik.uni-freiburg.de/home">Social Robotics Laboratory</a>. 
@@ -40,7 +39,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Research Interests</h2>
-						<p>The topic of my PhD is human motion prediction and predictive planning for service robots. 
+						<p>The topic of my PhD research and the consequent interest is human motion prediction and predictive planning for service robots. 
 						To this end I study algorithms for long-term (10+ seconds) trajectory prediction 
 						in social and urban spaces. This includes e.g. MDP-based uncertainty- and map-aware 
 						trajectory forecasting and human-human interactions modelling under social grouping constraints.</p>
@@ -95,7 +94,7 @@
 						<li><a href="https://www.flickr.com/photos/nekr0n/" class="icon brands fa-flickr"><span class="label">Flickr</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; 2020 Andrey Rudenko</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2022 Andrey Rudenko</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
